@@ -1,3 +1,14 @@
+2001-11-28  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* boot.pl.in (xst_boot_entries_get): pass param of where
+	the grub.conf file is to the entries_get proc.
+	
+	Use double quotes instead of single for hash indexes and
+	table entries: this makes string search easier.
+
+	* boot-grub.pl.in: fixed a lot of bugs. Implemented missing
+	grub functions: image, other, append.
+
 2001-11-28  Hans Petter Jansson  <hpj@ximian.com>
 
 	* filesys.pl.in (xst_filesys_mount_sync_all): Use the
